--- a/NodeServerAndAngularWithLogin/NodeApiServer-TS/package.json
+++ b/NodeServerAndAngularWithLogin/NodeApiServer-TS/package.json
@@ -16,7 +16,6 @@
     "bcryptjs": "2.4.3",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
-    "dotenv": "6.0.0",
     "express": "4.16.3",
     "express-session": "1.15.6",
     "express-validator": "5.3.0",
@@ -38,18 +37,7 @@
     "@types/node": "10.5.5",
     "@types/passport": "0.4.6",
     "@types/passport-jwt": "3.0.1",
-    "@types/superagent": "3.8.3",
-    "chai": "4.1.2",
-    "gulp": "3.9.1",
-    "gulp-apidoc": "0.2.8",
-    "gulp-sourcemaps": "2.6.4",
-    "gulp-typescript": "5.0.0-alpha.3",
-    "gulp-util": "3.0.8",
-    "istanbul": "0.4.5",
-    "mocha": "5.2.0",
-    "supertest": "3.1.0",
     "tslint": "5.11.0",
-    "typescript": "2.7.2",
-    "vinyl-fs": "3.0.3"
+    "typescript": "2.7.2"
   }
 }
