--- a/NodeServerAndAngulerAppOnDiffrentServer/NodeApiServer-JS/package.json
+++ b/NodeServerAndAngulerAppOnDiffrentServer/NodeApiServer-JS/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "swagger-node-express": "^2.1.3",
+    "minimist": "^1.2.0"
   }
 }
