--- a/NodeServerAndAngularWithLogin/NodeApiServer-TS/package.json
+++ b/NodeServerAndAngularWithLogin/NodeApiServer-TS/package.json
@@ -25,7 +25,9 @@
     "morgan": "1.9.0",
     "nodemon": "1.18.3",
     "passport": "0.4.0",
-    "passport-jwt": "4.0.0"
+    "passport-jwt": "4.0.0",
+    "swagger-node-express": "2.1.3",
+    "minimist": "1.2.0"
   },
   "devDependencies": {
     "@types/express-session": "1.15.10",
